--- a/bluestyle.css
+++ b/bluestyle.css
@@ -1,10 +1,21 @@
 body{
     background-image: linear-gradient(to left, #1463F3, #84A4FC) ;
+    
 }
 
-h1,p{
+html{
+    height: 100%;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}   
+
+p{
     color: #1D2023;
     margin-left: 20-px;
+    text-align: center;
+    font-size: 20px;
 }
 
 div{
@@ -13,18 +24,56 @@ div{
 }
 
 #home{
+        color: #1D2023;
         /* Change font family */
-        font-family: Arial, sans-serif;
+        font-family: "Helvetica Neue";
     
         /* Change font weight */
         font-weight: bold;
         
-        /* Change font style */
-        font-style: italic;
-        
         /* Transform text to uppercase */
         text-transform: uppercase;
+
+        text-align: center;
         
         /* Change font size */
-        font-size: 24px;
+        font-size: 120px;
 }
+
+#title{
+    text-align: center;
+        
+    /* Change font size */
+    font-size: 30px;
+}
+
+/* Style the navigation bar */
+.rightnav {
+    background-color: #1D2023; /* Background color for the navigation bar */
+    position: fixed; /* Position the navigation bar */
+    top: 0; /* Align the navigation bar to the top of the viewport */
+    left: 0; /* Align the navigation bar to the right side of the viewport */
+    display: flex; /* Use flexbox layout */
+    flex-direction: column; /* Display the items vertically */
+    align-items: flex-start; /* Align items to the end (right) of the flex container */
+    height:100%;
+    width:10%;
+  }
+  
+  /* Style the navigation links */
+  .rightnav a {
+    color: #CCD0D8; /* Text color for the links */
+    text-align: left; /* Align the text to the right */
+    padding: 14px 16px; /* Padding for the links (top and bottom, left and right) */
+    text-decoration: none; /* Remove underline from the links */
+  }
+  
+  /* Change the color of the links when hovered */
+  .rightnav a:hover {
+    background-color:  #CCD0D8; /* Text color for the links */
+    ; /* Background color when hovered */
+    color: #1D2023;
+    width: 78%; /* Text color when hovered */
+  }
+  
+  
