--- a/bluestyle.css
+++ b/bluestyle.css
@@ -114,13 +114,48 @@ h3{
 
 .email i {
   font-size: 50px; /* Set the font size of the icon (adjust as needed) */
-  color: white; /* Set the color of the icon */
+  color: black; /* Set the color of the icon */
   margin-right: 10px; /* Add some space between the icon and text */
 }
 
-.email p {
-  color: #1D2023; /* Set the color of the text */
+.email a {
   margin: 0; /* Remove default margin */
+  color: #1D2023;
+  margin-left: 30px;
+  text-align: left;
+  font-size: 20px;
+  font-weight:700;
+}
+
+.resume {
+  background-color: black; /* Default background color */
+  color: white; /* Default text color */
+  padding: 15px 60px; /* Adjust padding as needed */
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s, color 0.3s; /* Smooth transition on hover */
+  align-items: center;
+  margin-left:30px;
+}
+
+/* Change button styles on hover */
+.resume:hover {
+  background-color: white; /* Hover background color */
+  color: black; /* Hover text color */
+}
+
+.resume a{
+  display: flex;
+  margin-left: 30px;
+  align-items: center;
+  font-size: 20px;
+  font-weight:700;
+}
+
+.resume i{
+  font-size:30px;
+  bottom:0;
 }
 
 
