--- a/bluestyle.css
+++ b/bluestyle.css
@@ -22,8 +22,8 @@ p{
     color: #1D2023;
     margin-left: 30px;
     text-align: left;
-    font-size: 20px;
-    font-weight:700;
+    font-size: 15px;
+    font-weight:500;
 }
 
 h3{
@@ -115,7 +115,6 @@ h3{
 .email i {
   font-size: 50px; /* Set the font size of the icon (adjust as needed) */
   color: black; /* Set the color of the icon */
-  margin-right: 10px; /* Add some space between the icon and text */
 }
 
 .email a {
@@ -126,6 +125,17 @@ h3{
   font-size: 20px;
   font-weight:700;
 }
+
+.linkedin{
+  display: flex; /* Use flexbox layout */
+  align-items: center; /* Align items vertically in the center */
+  text-decoration: none;
+  margin: 0; /* Remove default margin */
+  color: #1D2023;
+  font-size: 20px;
+  font-weight:700;
+}
+
 
 .resume {
   background-color: black; /* Default background color */
