--- a/bluestyle.css
+++ b/bluestyle.css
@@ -118,11 +118,9 @@ hr{
   }
 
   .progress-container {
-    background-color: #f0f0f0;
-    border-radius: 4px;
-    height: 20px;
-    overflow: hidden;
     flex: 1;
+    width: 60%;
+    flex-basis: 50%;
      /* Grow to fill available space */
   }
 }
@@ -191,6 +189,7 @@ hr{
   border-radius: 4px;
   height: 20px;
   overflow: hidden;
+  flex-basis: 70%;
   flex: 2;
    /* Grow to fill available space */
 }
