--- a/bluestyle.css
+++ b/bluestyle.css
@@ -44,7 +44,7 @@ hr{
 
 
 #home{
-        color: #1D2023;
+        color: white;
         /* Change font family */
         font-family: "Arial";
     
