--- a/bluestyle.css
+++ b/bluestyle.css
@@ -98,30 +98,6 @@ hr{
   width: 100% /* Text color when hovered */
 }
 
-@media only screen and (max-width: 600px) {
-  /*
-  .leftnav {
-    flex-direction: row; 
-    justify-content: space-between; 
-    align-items: center; 
-    padding: 10px;
-    height: auto;
-    left:0; 
-  }
-
-  .leftnav a {
-    text-align: center;
-    padding: 10px;
-  }
-
-  .leftnav a i {
-    margin-right: 0;
-  }*/
-
-  .progress-container {
-    flex: 1;
-  }
-}
 
 .contact-icons {
   display: flex;
@@ -187,8 +163,8 @@ hr{
   border-radius: 4px;
   height: 20px;
   overflow: hidden;
-  flex: 2;
-   /* Grow to fill available space */
+  flex: 1;
+  margin-top: 5px;
 }
 
 /* Style for the progress bar */
